# neuronet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ilayer.cpp  ilayer.h  input_layer.cpp  input_layer.h  ioutput.cpp  ioutput.h  main.cpp  network_trainer.cpp  network_trainer.h  neuron.cpp  neuron.h  neurons_layer.cpp  neurons_layer.h  neurons_network.cpp  neurons_network.h  neuronsnetworkfactory.cpp  neuronsnetworkfactory.h  std_vector_util.h  training_data.h  vector.cpp  vector.h  vector_util.cpp  vector_util.h
cases/: case.h  case1.cpp  case1.h  case_mnist.cpp  case_mnist.h
neurons_network/: CMakeLists.txt  convolution_layer.cpp  convolution_layer.h  dummy.cpp  dummy.h  ilayer.cpp  ilayer.h  ineurons_layer.cpp  ineurons_layer.h  input_layer.cpp  input_layer.h  many_to_many_layer.cpp  many_to_many_layer.h  max_pooling_neuron.cpp  max_pooling_neuron.h  maxpool_layer.cpp  maxpool_layer.h  network_trainer.cpp  network_trainer.h  neuron.cpp  neuron.h  neurons_layer.cpp  neurons_layer.h  neurons_network.cpp  neurons_network.h  neurons_network_factory.cpp  neurons_network_factory.h  neuronsnetworkfactory.cpp  neuronsnetworkfactory.h  one_to_many_layer.cpp  one_to_many_layer.h  softmax_layer.cpp  softmax_layer.h  sparse_layer.cpp  sparse_layer.h  training_data.h  vector_util.h
